package client

import (
	pb "Flux-KV/api/proto"
	"Flux-KV/pkg/discovery"
	"context"
	"errors"
	"log"
	"sync"
	"sync/atomic"
	"time"

	"go.opentelemetry.io/contrib/instrumentation/google.golang.org/grpc/otelgrpc"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
)

// Client å°è£…äº† gRPC è¿æ¥æ± å’Œè´Ÿè½½å‡è¡¡ç­–ç•¥
type Client struct {
	mu      sync.RWMutex
	conns   map[string]*grpc.ClientConn   // addr -> åŸå§‹è¿æ¥
	clients map[string]pb.KVServiceClient // addr -> å®¢æˆ·ç«¯å­˜æ ¹
	addrs   []string                      // èŠ‚ç‚¹åœ°å€åˆ—è¡¨ï¼ˆç”¨äºè½®è®­ç´¢å¼•ï¼‰

	seq uint64 // è½®è¯¢è®¡æ•°å™¨
}

// NewClient åˆå§‹åŒ–å®¢æˆ·ç«¯ç®¡ç†å™¨ï¼Œå¹¶å¼€å§‹ç›‘å¬æœåŠ¡èŠ‚ç‚¹å˜åŒ–
func NewClient(d *discovery.Discovery, serviceName string) (*Client, error) {
	c := &Client{
		clients: make(map[string]pb.KVServiceClient),
		conns:   make(map[string]*grpc.ClientConn),
		addrs:   make([]string, 0),
	}

	// å¯åŠ¨ç›‘å¬ (å›è°ƒå‡½æ•°ä¼šè‡ªåŠ¨å¤„ç†ç°æœ‰èŠ‚ç‚¹å’Œæœªæ¥èŠ‚ç‚¹çš„è¿æ¥å»ºç«‹)
	// å‡è®¾ Etcd ä¸­æ³¨å†Œçš„ Key æ˜¯ /services/kv-service/uuid
	// æˆ‘ä»¬ç›‘å¬çš„å‰ç¼€å°±æ˜¯ /services/kv-service/
	prefix := "/services/" + serviceName + "/"
	err := d.WatchService(prefix, c.addNode, c.removeNode)
	if err != nil {
		return nil, err
	}

	return c, nil
}

// NewDirectClient åˆ›å»ºç›´è¿å•ä¸ªèŠ‚ç‚¹çš„å®¢æˆ·ç«¯ï¼ˆä¸ä½¿ç”¨æœåŠ¡å‘ç°ï¼‰
// é€‚ç”¨äºæµ‹è¯•ç”¨ä¾‹æˆ–æ‰‹åŠ¨è·¯ç”±åœºæ™¯
func NewDirectClient(addr string) (*Client, error) {
	c := &Client{
		clients: make(map[string]pb.KVServiceClient),
		conns:   make(map[string]*grpc.ClientConn),
		addrs:   make([]string, 0),
	}

	// ç›´æ¥æ·»åŠ èŠ‚ç‚¹
	c.addNode("direct", addr)

	c.mu.RLock()
	defer c.mu.RUnlock()
	if len(c.clients) == 0 {
		return nil, errors.New("failed to connect to " + addr)
	}

	return c, nil
}

// Close å…³é—­åº•å±‚è¿æ¥
func (c *Client) Close() error {
	c.mu.Lock()
	defer c.mu.Unlock()

	for addr, conn := range c.conns {
		conn.Close()
		log.Printf("ğŸ”Œ [Client] å…³é—­è¿æ¥: %s", addr)
	}
	return nil
}

// addNode èŠ‚ç‚¹ä¸Šçº¿å›è°ƒï¼šå»ºç«‹è¿æ¥å¹¶åŠ å…¥æ± å­
func (c *Client) addNode(key, value string) {
	c.mu.Lock()
	defer c.mu.Unlock()

	addr := value // Etcd value å­˜å‚¨çš„æ˜¯ "ip:port"

	// é˜²æ­¢é‡å¤æ·»åŠ 
	if _, ok := c.clients[addr]; ok {
		return
	}

	// å»ºç«‹ gRPC è¿æ¥
	conn, err := grpc.NewClient(addr,
		grpc.WithTransportCredentials(insecure.NewCredentials()),
		grpc.WithStatsHandler(otelgrpc.NewClientHandler()),
	)
	if err != nil {
		log.Printf("âŒ [Client] è¿æ¥èŠ‚ç‚¹å¤±è´¥ %s: %v", addr, err)
		return
	}

	// åˆ›å»ºå­˜æ ¹
	rpcClient := pb.NewKVServiceClient(conn)

	c.clients[addr] = rpcClient
	c.conns[addr] = conn
	c.addrs = append(c.addrs, addr)

	log.Printf("âœ… [Client] èŠ‚ç‚¹ä¸Šçº¿: %s (å½“å‰å¯ç”¨: %d)", addr, len(c.addrs))
}

// removeNode èŠ‚ç‚¹ä¸‹çº¿å›è°ƒï¼šå…³é—­è¿æ¥å¹¶ç§»å‡ºæ± å­
func (c *Client) removeNode(key, value string) {
	c.mu.Lock()
	defer c.mu.Unlock()

	addr := value

	// å…³é—­è¿æ¥
	if conn, ok := c.conns[addr]; ok {
		conn.Close()
		delete(c.conns, addr)
	}
	delete(c.clients, addr)

	// ä»åˆ‡ç‰‡ä¸­ç§»é™¤åœ°å€
	newAddrs := make([]string, 0, len(c.addrs))
	for _, a := range c.addrs {
		if a != addr {
			newAddrs = append(newAddrs, a)
		}
	}
	c.addrs = newAddrs

	log.Printf("âŒ [Client] èŠ‚ç‚¹ä¸‹çº¿: %s (å½“å‰å¯ç”¨: %d)", addr, len(c.addrs))
}

// Load Balance è½®è¯¢é€‰æ‹©ä¸€ä¸ªèŠ‚ç‚¹
func (c *Client) lb() (pb.KVServiceClient, error) {
	c.mu.RLock()
	defer c.mu.RUnlock()

	if len(c.addrs) == 0 {
		return nil, errors.New("no available kv-service nodes")
	}

	// æ ¸å¿ƒï¼šåŸå­é€’å¢ï¼Œå®ç° Round-Robin
	next := atomic.AddUint64(&c.seq, 1)
	index := next % uint64(len(c.addrs))

	targetAddr := c.addrs[index]
	client := c.clients[targetAddr]

	return client, nil
}

// Set å°è£… Set è¯·æ±‚
func (c *Client) Set(key, value string) error {
	client, err := c.lb()
	if err != nil {
		return err
	}

	ctx, cancel := context.WithTimeout(context.Background(), 15*time.Second) // å¢åŠ åˆ° 15ç§’
	defer cancel()

	_, err = client.Set(ctx, &pb.SetRequest{Key: key, Value: value})
	return err
}

// Get å°è£… Get è¯·æ±‚
func (c *Client) Get(key string) (string, error) {
	client, err := c.lb()
	if err != nil {
		return "", err
	}

	ctx, cancel := context.WithTimeout(context.Background(), 15*time.Second) // å¢åŠ åˆ° 15ç§’
	defer cancel()

	resp, err := client.Get(ctx, &pb.GetRequest{Key: key})
	if err != nil {
		return "", err
	}
	return resp.Value, nil
}

// Del å°è£… Del è¯·æ±‚
func (c *Client) Del(key string) error {
	client, err := c.lb()
	if err != nil {
		return err
	}

	ctx, cancel := context.WithTimeout(context.Background(), 2*time.Second)
	defer cancel()

	_, err = client.Del(ctx, &pb.DelRequest{Key: key})
	return err
}
